cmd/cli/kubectl-kyverno/policy/testdata/list-multiple-policies.yaml
apiVersion: v1
kind: List
items:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    name: require-labels
  spec:
    validationFailureAction: audit
    background: true
    rules:
    - name: check-for-labels
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "The label 'app.kubernetes.io/name' is required."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
- apiVersion: kyverno.io/v1
  kind: Policy
  metadata:
    name: namespace-policy
    namespace: default
  spec:
    validationFailureAction: enforce
    background: true
    rules:
    - name: check-namespace
      match:
        any:
        - resources:
            kinds:
            - Service
      validate:
        message: "Service must have specific annotation"
        pattern:
          metadata:
            annotations:
              service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
