cmd/cli/kubectl-kyverno/policy/testdata/list-single-clusterpolicy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    name: require-labels
  spec:
    validationFailureAction: audit
    background: true
    rules:
    - name: check-for-labels
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "The label 'app.kubernetes.io/name' is required."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
