cmd/cli/kubectl-kyverno/policy/testdata/list-vaps.yaml
apiVersion: v1
kind: List
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingAdmissionPolicy
  metadata:
    name: test-vap
  spec:
    failurePolicy: Fail
    matchConstraints:
      resourceRules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    validations:
    - expression: "object.metadata.labels['app'] != ''"
      message: "App label is required"
